--- a/TestHR.Web/Areas/Admin/Views/Company/Edit.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Company/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TestHR.Web.Areas.Admin.Models.CompanyModel
 @{
-    ViewBag.Title = "Add";
+    ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -13,42 +13,44 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Company Settings</span><br>
-                    <form method="post" action="/Admin/Company/Edit">
+                    @using (Html.BeginForm("Edit", "Company", FormMethod.Post))
+                    {
+                        @Html.ValidationSummary(true)
                         <div class="row">
                             <div class="row">
                                 @Html.HiddenFor(model=>model.Id)
                                 <div class="input-field col s6">
-                                   @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
                                     <label for="Name">Company Name</label>
+                                    @Html.ValidationMessageFor(model => model.Name)
                                 </div>
                                 <div class="input-field col s6">
-                                    @*@Html.DropDownListFor(x => x.MotherCompanies, new List<SelectListItem>
-                                    {
-                                        new SelectListItem() {Text = "Company", Value = "Company"},
-                                        new SelectListItem() {Text = "Individual", Value = "Individual"},
-                                    }, "--Select--", new { @class = "form-control" })*@
                                     @Html.DropDownListFor(m => m.MotherCompanyId, new SelectList(Model.MotherCompanies, "Id", "Name"), "", new { @class = "" })
                                     <label>Mother Company</label>
                                 </div>
                                 <div class="input-field col s6">
                                     @Html.TextBoxFor(model => model.Address, new { @class = "form-control" })
                                     <label for="Address">Address</label>
+                                    @Html.ValidationMessageFor(model => model.Address)
                                 </div>
                                 <div class="input-field col s6">
                                     <label for="Phone">Phone </label>
                                     @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.Phone)
                                 </div>
                                 <div class="input-field col s6">
                                     <label for="Email">Email</label>
                                     @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.Email)
                                 </div>
                                 <div class="input-field col s6">
                                     <label for="Fax">Fax</label>
-                                   @Html.TextBoxFor(model => model.Fax, new { @class = "form-control" })
+                                    @Html.TextBoxFor(model => model.Fax, new { @class = "form-control" })
                                 </div>
                                 <div class="input-field col s6">
                                     <label for="ContactPerson">Contact Person</label>
                                     @Html.TextBoxFor(model => model.ContactPerson, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.ContactPerson)
                                 </div>
                                 <div class="input-field col s6">
                                     @Html.DropDownListFor(x => x.FiscalYearStart, new List<SelectListItem>
@@ -56,16 +58,27 @@
                                         new SelectListItem() {Text = "January", Value = "January"},
                                         new SelectListItem() {Text = "February", Value = "February"},
                                         new SelectListItem() {Text = "March", Value = "March"},
+                                        new SelectListItem() {Text = "April", Value = "April"},
+                                        new SelectListItem() {Text = "May", Value = "May"},
+                                        new SelectListItem() {Text = "June", Value = "June"},
+                                        new SelectListItem() {Text = "July", Value = "July"},
+                                        new SelectListItem() {Text = "August", Value = "August"},
+                                        new SelectListItem() {Text = "September", Value = "September"},
+                                        new SelectListItem() {Text = "October", Value = "October"},
+                                        new SelectListItem() {Text = "November", Value = "November"},
+                                        new SelectListItem() {Text = "Devember", Value = "Devember"},
                                     }, "--Select--", new { @class = "form-control" })
                                     <label>Fiscal Year Start </label>
                                 </div>
                                 <div class="input-field col s6">
                                     <label for="ContactPersonEmail">Primary Contact Email </label>
                                     @Html.TextBoxFor(model => model.ContactPersonEmail, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.ContactPersonEmail)
                                 </div>
                                 <div class="input-field col s6">
                                     <label for="ContactPersonPhone">Primary Contact Phone </label>
                                     @Html.TextBoxFor(model => model.ContactPersonPhone, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.ContactPersonPhone)
                                 </div>
                             </div>
                         </div>
@@ -88,10 +101,13 @@
                                 @Html.ActionLink("Cancel", "Index", "Company", null, new { @class = "btn btn-default red col s4 offset-m1" })
                             </div>
                         </div>
-                    </form>
+                    }
                 </div>
             </div>
         </div>
     </div>
 </main>
 
+@section scripts{
+    @Scripts.Render("~/bundles/jqueryval")
+}
