--- a/TestHR.Web/Areas/Admin/Views/Branch/Edit.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Branch/Edit.cshtml
@@ -13,17 +13,21 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Branch Settings</span><br>
-                    <form method="post" action="/Admin/Branch/Edit">
-                        <div class="row">
+                        @using (Html.BeginForm("", "", FormMethod.Post))
+                        {
+                            @Html.ValidationSummary(true)
+                            <div class="row">
                             <div class="row">
                                 @Html.HiddenFor(model=>model.Id)
                                 <div class="input-field col s6">
                                     <label for="Name">Branch Name</label>
                                     @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model=>model.Name)
                                 </div>
                                 <div class="input-field col s6">
-                                    @Html.DropDownListFor(m => m.CompanyId, new SelectList(Model.Company, "Id", "Name"), "--Select--", new { @class = "" })
+                                    @Html.DropDownListFor(model => model.CompanyId, new SelectList(Model.Company, "Id", "Name"), "--Select--", new { @class = "" })
                                     <label>Company</label>
+                                    @Html.ValidationMessageFor(model => model.CompanyId)
                                 </div>
                                 <div class="input-field col s6">
                                     <label for="textarea1">Description</label>
@@ -38,7 +42,7 @@
                                 @Html.ActionLink("Cancel", "Index", "Branch", null, new { @class = "btn btn-default red col s4 offset-m1" })
                             </div>
                         </div>
-                    </form>
+                        }
                 </div>
             </div>
         </div>
