--- a/TestHR.Web/Areas/Admin/Views/Employee/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Employee/Index.cshtml
@@ -15,6 +15,8 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title">Employee</span>
+                        <a href="@Url.Action("Add", "Employee", new { })" class="btn btn-default btn-group-sm">Add</a>
+                        @*<a href="@Url.Action("CompanyFileImport", "Employee", new { })" class="btn btn-default btn-group-sm"><i>Import Excel</i></a>*@
                         <table id="employeeList" class="display responsive-table datatable-example">
                             <thead>
                                 <tr>
